2001-09-08  Eric Blake  <ebb9@email.byu.edu>

	* src/body.cpp (ProcessSynchronizedStatement, ProcessIfStatement):
	Detect illegal synchronized(null){}, bug 1882, and clean up
	impossible check for statements that complete normally - patch 182.

2001-09-08  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (UpdateGeneratedLocalConstructor): 
	Removed the cause of a core dump when a method omits a
	return type in a local class - patch 91, from bug 179.
	* src/error.h:
	* src/error.cpp (PrintMISSPELLED_CONSTRUCTOR_NAME): 
	Added an error to differentiate between behavior
	taken when bad constructor is interpreted as
	misspelling instead of missing return type.
	Improved the wording of various constructor-related
	error messages.
	* src/decl.cpp (ProcessConstructorDeclaration): 
	Added some better handling of misspelled name vs.
	missing return type.
	* src/spell.h (Spell): Added some documentation
	to better explain this (useful) class.

2001-09-08  Eric Blake  <ebb9@email.byu.edu>

	* src/jikesapi.cpp (JikesOption): Attempt a workaround to a segv
	encountered with bad encoding from patch 168.

2001-09-07  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (ProcessMembers, ProcessFieldDeclaration)
	(ProcessMethodDeclaration, ProcessStaticInitializers): Improve the
	error handling of inner classes and static members - patch 86,
	from bugs 247, 343, 348, 349.
	* src/error.h:
	* src/error.cpp (PrintSTATIC_FIELD_IN_INNER_CLASS):
	Split into:
	(PrintSTATIC_FIELD_IN_INNER_CLASS_NOT_FINAL)
	(PrintSTATIC_FIELD_IN_INNER_CLASS_NOT_CONSTANT):
	Report error messages on static fields in inner types located in
	static context (bug 348).
	(PrintSTATIC_METHOD_IN_INNER_CLASS, PrintSTATIC_TYPE_IN_INNER_CLASS)
	(PrintSTATIC_INITIALIZER_IN_INNER_CLASS):
	Improved the error message wording to be consistent.
	* src/symbol.cpp:
	* src/symbol.h (TypeSymbol): Deleted IsTopLevel(), since it was
	redundant with IsInner().  Fixed IsInner() to correctly detect