@@ -4,6 +4,7 @@ Subsequent contributors include, but are not limited to:
 Chris Abbey
 C. Scott Ananian
 Eric Blake
+Norris Boyd
 Ian P. Cardenas
 Mo DeJong
 Pascal Davoust
